src/test/deca/context/valid/instanceOf.deca
class Animal {
}

class Lion extends Animal {
}

{
    Lion lion = new Lion();
    if (lion instanceof Animal && lion instanceof Lion) {
        println("OK");
    }
}
