src/test/deca/context/invalid/instanceOf.deca
class Animal {
}

class Lion extends Animal {
}

{
    Lion lion = new Lion();
    if (Lion instanceof Animal && lion instanceof Lion) {
        println("OK");
    }
}
//ERROR :9:
